--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
 	"require":{
 		"php" : ">=7.0",
         "monolog/monolog": "1.22.1",
-		"topthink/think-orm":"~0.2"
+		"topthink/think-orm":"~0.2",
+        "hassankhan/config":"~0.11.2"
 	},
     "autoload":{
 		"psr-4":{
