--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "monolog/monolog": "1.22.1",
 		"topthink/think-orm":"~0.2",
         "hassankhan/config":"~0.11.2",
-		"graylog2/gelf-php": "~1.0"
+		"graylog2/gelf-php": "~1.0",
+        "nikic/fast-route":"~1.2.0"
 	},
     "autoload":{
 		"psr-4":{
