支持swool_http_server

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
 	},
     "autoload":{
 		"psr-4":{
-			"app\\":"app",
+			"app\\":"src/app",
             "Server\\":"src/Server"
 		},
         "files": [
