--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,6 @@
 			"name":"guandeng",
             "email":"guandeng@hotmail.com",
             "homepage":"https://github.com/guandeng"
-
 		}
 	],
 	"require":{
@@ -14,7 +13,8 @@
 		"topthink/think-orm":"~0.2",
         "hassankhan/config":"~0.11.2",
 		"graylog2/gelf-php": "~1.0",
-        "nikic/fast-route":"~1.2.0"
+		"nikic/fast-route":"~1.2.0",
+		"jeremeamia/superclosure": "^2.0"
 	},
     "autoload":{
 		"psr-4":{
@@ -24,5 +24,6 @@
         "files": [
             "src/Server/helpers/Common.php"
         ]
-	}
+	},
+	"description": "simple swoole api server"
 }
